--- a/QS.ServiceLayer/QS.ServiceLayer.csproj
+++ b/QS.ServiceLayer/QS.ServiceLayer.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\QS\source\repos\QS.Core\QS.Core.Web\QS.ServiceLayer.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591;</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\QS.DataLayer\QS.DataLayer.csproj" />
   </ItemGroup>
