权限部分实体

--- a/QS.Core.Web/appsettings.json
+++ b/QS.Core.Web/appsettings.json
@@ -10,6 +10,9 @@
   "DB": {
     "SqlServer": {
       "ConnectionString": "Server=localhost\\SQLEXPRESS;Database=QS.Test;Trusted_Connection=True;"
+    },
+    "MySql": {
+      "ConnectionString": "server=101.220.242.7;userid=root;pwd=123456;port=3306;database=QS.Core;"
     }
   }
 }
