切换数据库

--- a/QS.Core.Web/appsettings.json
+++ b/QS.Core.Web/appsettings.json
@@ -8,11 +8,9 @@
   },
   "AllowedHosts": "*",
   "DB": {
+    "UseDB": "SqlServer",
     "SqlServer": {
       "ConnectionString": "Server=localhost\\SQLEXPRESS;Database=QS.Test;Trusted_Connection=True;"
-    },
-    "MySql": {
-      "ConnectionString": "server=101.200.242.7;userid=root;pwd=123456;port=3306;database=QS.Core;"
     }
   }
 }
