--- a/QS.Core.Web/QS.Core.Web.csproj
+++ b/QS.Core.Web/QS.Core.Web.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\QS\source\repos\QS.Core\QS.Core.Web\QS.Core.Web.xml</DocumentationFile>
+    <DocumentationFile>.\QS.Core.Web.xml</DocumentationFile>
     <NoWarn>1701;1702;1591;</NoWarn>
   </PropertyGroup>
 
