服务自动注入

--- a/QS.Core.Web/appsettings.json
+++ b/QS.Core.Web/appsettings.json
@@ -10,7 +10,7 @@
   "DB": {
     "UseDB": "SqlServer",
     "SqlServer": {
-      "ConnectionString": "Server=localhost\\SQLEXPRESS;Database=QS.Test;Trusted_Connection=True;"
+      "ConnectionString": "Server=.;Database=QS.Test;Trusted_Connection=True;"
     }
   }
 }
