--- a/QS.Core.Web/QS.Core.Web.csproj
+++ b/QS.Core.Web/QS.Core.Web.csproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\QS.DataLayer\QS.DataLayer.csproj" />
+    <ProjectReference Include="..\QS.Permisson\QS.Permission.csproj" />
     <ProjectReference Include="..\QS.ServiceLayer\QS.ServiceLayer.csproj" />
   </ItemGroup>
 
