--- a/QS.ServiceLayer/QS.ServiceLayer.csproj
+++ b/QS.ServiceLayer/QS.ServiceLayer.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\QS.DataLayer\QS.DataLayer.csproj" />
   </ItemGroup>
 
