--- a/QS.Core.Web/appsettings.json
+++ b/QS.Core.Web/appsettings.json
@@ -12,5 +12,11 @@
     "SqlServer": {
       "ConnectionString": "Server=.;Database=QS.Test;Trusted_Connection=True;"
     }
+  },
+  "Audience": {
+    "Secret": "sdfsdfsrty45634kkhllghtdgdfss345t678fs", //不要太短，16位+
+    "SecretFile": "C:\\my-file\\blog.core.audience.secret.txt", //安全。内容就是Secret
+    "Issuer": "Blog.Core",
+    "Audience": "wr"
   }
 }
