--- a/QS.Core.Web/appsettings.json
+++ b/QS.Core.Web/appsettings.json
@@ -16,7 +16,8 @@
   "Audience": {
     "Secret": "sdfsdfsrty45634kkhllghtdgdfss345t678fs", //不要太短，16位+
     "SecretFile": "C:\\my-file\\blog.core.audience.secret.txt", //安全。内容就是Secret
-    "Issuer": "Blog.Core",
-    "Audience": "wr"
+    "Issuer": "QS",
+    "Audience": "wr",
+    "RE": 2000//刷新有效期 分钟
   }
 }
