日志和缓存

--- a/QS.Core.Web/appsettings.json
+++ b/QS.Core.Web/appsettings.json
@@ -1,12 +1,16 @@
 {
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Info",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
+  "Config": {
+    "InitModule": "0"
+  },
   "DB": {
     "UseDB": "SqlServer",
     "SqlServer": {
@@ -18,6 +22,11 @@
     "SecretFile": "C:\\my-file\\blog.core.audience.secret.txt", //安全。内容就是Secret
     "Issuer": "QS",
     "Audience": "wr",
-    "RE": 2000//刷新有效期 分钟
+    "RE": 2000 //刷新有效期 分钟
+  },
+  "Cache": {
+    //"Redis": {
+    //  "ConnectionString": "127.0.0.1:6379"
+    //}
   }
 }
