--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,10 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/QS.Core.Web/Uploads/2020/09/04/d0f70704-495a-4b54-8235-a62c6c30dc80.jpg
+/QS.Core.Web/Uploads/2020/09/04/c1da827c-a114-4472-b71d-03f472eb1b91.jpg
+/QS.Core.Web/Uploads/2020/09/04/b5aa5fc1-5f3f-43d0-8477-0b3219dab7ce.jpg
+/QS.Core.Web/Uploads/2020/09/04/b548dc0b-d85b-46ab-845b-504a4a525784.jpg
+/QS.Core.Web/Uploads/2020/09/04/6d1d1404-26d7-4157-ae8d-8516a81579d4.jpg
+/QS.Core.Web/Uploads/2020/09/04/4660bb35-84ad-4fcd-84f9-6c980a14a66a.jpg
+/QS.Core.Web/Uploads/2020/09/04/209dd248-7394-4c68-817f-392325400c6e.jpg
