--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -27,3 +27,8 @@ stages:
         dockerfile: '$(Build.SouresDirectory)/QS.Core/QS.Core.Web/Dockerfile'
         tags: |
           $(tag)
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'docker 镜像生成'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
