--- a/QS.Core.Web/appsettings.json
+++ b/QS.Core.Web/appsettings.json
@@ -4,7 +4,8 @@
     "LogLevel": {
       "Default": "Info",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database": "Information"
     }
   },
   "AllowedHosts": "*",
