--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,4 +30,5 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'docker 镜像生成'
+        repository: 'QSWeb'
         command: 'push'
