--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,6 @@ stages:
           $(tag)
     - task: Docker@2
       inputs:
-        containerRegistry: 'TestDocker'
+        containerRegistry: 'docker 镜像生成'
         repository: 'QSWeb'
         command: 'push'
