Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,8 +17,7 @@ stages:
   jobs:  
   - job: Build
     displayName: Build
-    pool:
-      vmImage: 'QSPool'
+    pool: 'QSPool'
     steps:
     - task: Docker@2
       displayName: Build an image
