--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,4 @@ healthchecksdb
 /QS.Core.Web/Uploads/2020/09/04/6d1d1404-26d7-4157-ae8d-8516a81579d4.jpg
 /QS.Core.Web/Uploads/2020/09/04/4660bb35-84ad-4fcd-84f9-6c980a14a66a.jpg
 /QS.Core.Web/Uploads/2020/09/04/209dd248-7394-4c68-817f-392325400c6e.jpg
+/QS.Core/SpecificationDocument
