--- a/QS.Core.Web/appsettings.json
+++ b/QS.Core.Web/appsettings.json
@@ -13,9 +13,13 @@
     "InitModule": "0"
   },
   "DB": {
-    "UseDB": "SqlServer",
-    "SqlServer": {
-      "ConnectionString": "Server=.;Database=QS.Test;Trusted_Connection=True;"
+    //"UseDB": "SqlServer",
+    //"SqlServer": {
+    //  "ConnectionString": "Server=.;Database=QS.Test;Trusted_Connection=True;"
+    //}
+    "UseDB": "MySql",
+    "MySql": {
+      "ConnectionString": "server=101.200.242.7;userid=root;pwd=123456;port=3306;database=QS.Core;"
     }
   },
   "Audience": {
