--- a/QS.Core/QS.Core.csproj
+++ b/QS.Core/QS.Core.csproj
@@ -12,18 +12,20 @@
 
   <ItemGroup>
     <PackageReference Include="EFCore.BulkExtensions" Version="3.1.1" />
-    <PackageReference Include="FreeSql" Version="2.0.100" />
-    <PackageReference Include="FreeSql.Repository" Version="2.0.100" />
+    <PackageReference Include="FreeSql" Version="2.0.101" />
+    <PackageReference Include="FreeSql.Provider.SqlServer" Version="2.0.101" />
+    <PackageReference Include="FreeSql.Repository" Version="2.0.101" />
     <PackageReference Include="Mapster" Version="7.0.0" />
     <PackageReference Include="Mapster.EFCore" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.7.1" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
     <PackageReference Include="MiniProfiler.AspNetCore" Version="4.2.1" />
+    <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
 
@@ -32,6 +34,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Folder Include="App\Extensions\" />
 	  <Folder Include="Core\DatabaseAccessor\UnitOfWork\Filters\" />
 	</ItemGroup>
 </Project>
