--- a/QingShan.Web/appsettings.json
+++ b/QingShan.Web/appsettings.json
@@ -19,22 +19,20 @@
       "SyncStructure": true
     },
     "SpecificationDocumentSettings": {
-      "DocumentTitle": "Fur | 数据库操作演示",
+      "DocumentTitle": "Specification Api Document",
       "GroupOpenApiInfos": [
         {
           "Group": "Demo",
-          "Title": "数据库操作演示",
-          "Description": "这里列举了常见数据库操作方法，方便大家学习。",
+          "Title": "Specification Api Document",
+          "Description": "这里列举了常见数据库操作方法",
           "Version": "1.0.0",
-          "TermsOfService": "https://furos.cn",
+          "TermsOfService": "123",
           "Contact": {
-            "Name": "百小僧",
-            "Url": "https://gitee.com/monksoul",
-            "Email": "monksoul@outlook.com"
+            "Name": "青杉",
+            "Url": "123"
           },
           "License": {
-            "Name": "Apache-2.0",
-            "Url": "https://gitee.com/monksoul/Fur/blob/rc1/LICENSE"
+            "Name": "Apache-2.0"
           }
         }
       ]
