--- a/QingShan.Core/QingShan.Core.csproj
+++ b/QingShan.Core/QingShan.Core.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0.0" />
+    <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
     <PackageReference Include="MiniProfiler.AspNetCore" Version="4.2.1" />
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.1" />
