--- a/QingShan.Web/QingShan.Web.csproj
+++ b/QingShan.Web/QingShan.Web.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>.\QingShan.Core.Web.xml</DocumentationFile>
+    <DocumentationFile>.\QingShan.Web.xml</DocumentationFile>
     <NoWarn>1701;1702;1591;</NoWarn>
   </PropertyGroup>
 
