--- a/QingShan.Web/appsettings.json
+++ b/QingShan.Web/appsettings.json
@@ -19,31 +19,79 @@
       "SyncStructure": true
     },
     "SpecificationDocumentSettings": {
-      "DocumentTitle": "Specification Api Document",
+      "DocumentTitle": "é’æ‰æ¥å£æœåŠ¡",
+      "FormatAsV2": true,
+      "RoutePrefix": "",
+      "SpecificationOpenApiInfo": [
+        {
+          "Group": "Default",
+          "Order": 0
+        },
+        {
+          "Group": "Upload",
+          "Order": 0
+        }
+      ],
       "GroupOpenApiInfos": [
         {
-          "Group": "Demo",
-          "Title": "Specification Api Document",
-          "Description": "ÕâÀïÁĞ¾ÙÁË³£¼ûÊı¾İ¿â²Ù×÷·½·¨",
-          "Version": "1.0.0",
-          "TermsOfService": "123",
+          "Group": "Default",
+          "Title": "é»˜è®¤APIæ¥å£",
+          "Description": "è¿™é‡Œåˆ—ä¸¾äº†å¸¸è§æ•°æ®åº“æ“ä½œæ–¹æ³•",
+          "Version": "v1",
           "Contact": {
-            "Name": "ÇàÉ¼",
-            "Url": "123"
+            "Name": "é’æ‰",
+            "Url": "http://zyaxin.com/",
+            "Email": "qingshan@zyaxin.com"
           },
           "License": {
             "Name": "Apache-2.0"
+          }
+        },
+        {
+          "Group": "Upload",
+          "Title": "ä¸Šä¼ æœåŠ¡",
+          "Description": "è¿™æ˜¯ä¸Šä¼ æ–‡ä»¶çš„æœåŠ¡æ¥å£",
+          "Version": "v1",
+          "Contact": {
+            "Name": "é’æ‰",
+            "Url": "http://zyaxin.com/",
+            "Email": "qingshan@zyaxin.com"
+          },
+          "License": {
+            "Name": "Apache-2.0"
+          }
+        }
+      ],
+      "EnableAuthorized": true,
+      "SecurityDefinitions": [
+        {
+          "Id": "Bearer",
+          "Type": "Http",
+          "Name": "Authorization",
+          "Description": "JWT Authorization header using the Bearer scheme.",
+          "BearerFormat": "JWT",
+          "Scheme": "bearer",
+          "In": "Header",
+
+          "Requirement": {
+            "Scheme": {
+              "Reference": {
+                "Id": "Bearer",
+                "Type": "SecurityScheme"
+              },
+              "Accesses": []
+            }
           }
         }
       ]
     }
   },
   "Audience": {
-    "Secret": "sdfsdfsrty45634kkhllghtdgdfss345t678fs", //²»ÒªÌ«¶Ì£¬16Î»+
-    "SecretFile": "C:\\my-file\\blog.core.audience.secret.txt", //°²È«¡£ÄÚÈİ¾ÍÊÇSecret
+    "Secret": "sdfsdfsrty45634kkhllghtdgdfss345t678fs", //ä¸è¦å¤ªçŸ­ï¼Œ16ä½+
+    "SecretFile": "C:\\my-file\\blog.core.audience.secret.txt", //å®‰å…¨ã€‚å†…å®¹å°±æ˜¯Secret
     "Issuer": "QingShan",
     "Audience": "wr",
-    "RE": 2000 //Ë¢ĞÂÓĞĞ§ÆÚ ·ÖÖÓ
+    "RE": 2000 //åˆ·æ–°æœ‰æ•ˆæœŸ åˆ†é’Ÿ
   },
   "Cache": {
     //"Redis": {
