--- a/QingShan.Web/QingShan.Web.csproj
+++ b/QingShan.Web/QingShan.Web.csproj
@@ -34,4 +34,5 @@
   <ItemGroup>
     <Folder Include="www\Upload\" />
   </ItemGroup>
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 </Project>
