添加静态文件

--- a/QingShan.Web/appsettings.json
+++ b/QingShan.Web/appsettings.json
@@ -29,7 +29,7 @@
         },
         {
           "Group": "Upload",
-          "Order": 0
+          "Order": 1
         }
       ],
       "GroupOpenApiInfos": [
@@ -86,12 +86,35 @@
       ]
     }
   },
-  "Audience": {
-    "Secret": "sdfsdfsrty45634kkhllghtdgdfss345t678fs", //不要太短，16位+
-    "SecretFile": "C:\\my-file\\blog.core.audience.secret.txt", //安全。内容就是Secret
-    "Issuer": "QingShan",
-    "Audience": "wr",
-    "RE": 2000 //刷新有效期 分钟
+
+  "JWTSettings": {
+    "ValidateIssuerSigningKey": true, // 是否验证密钥，bool 类型，默认true
+    "IssuerSigningKey": "pE1yb^iJHJh7zSL0CBctR9Se!bKD8P3ZpL*N", // 密钥，string 类型，必须是复杂密钥，长度大于16
+    "ValidateIssuer": true, // 是否验证签发方，bool 类型，默认true
+    "ValidIssuer": "QingShan", // 签发方，string 类型
+    "ValidateAudience": true, // 是否验证签收方，bool 类型，默认true
+    "ValidAudience": "QS", // 签收方，string 类型
+    "ValidateLifetime": true, // 是否验证过期时间，bool 类型，默认true，建议true
+    "ExpiredTime": 20, // 过期时间，long 类型，单位分钟，默认20分钟
+    "ClockSkew": 5 // 过期时间容错值，long 类型，单位秒，默认 5秒
+  },
+  "StaticFileSettings": {
+    "UseDirectoryBrowser": false,
+    "StaticFileMap": [
+      {
+        "Suffix": ".jpg", //文件后缀
+        "FileType": "image/jpeg" // 文件类型
+      }
+    ],
+    "StaticFileFolder": [
+      {
+        "Folder": "www", //文件夹名称
+        "ServeUnknownFileTypes": true, //如果文件不是可识别的内容类型，是否应该提供该文件?默认值:false。
+        "DefaultContentType": "application/x-msdownload", // 设置未识别的MIME类型一个默认z值
+        "RequestPath": "/qs" //请求路径
+      }
+    ]
+
   },
   "Cache": {
     //"Redis": {
