--- a/QingShan.Web/appsettings.json
+++ b/QingShan.Web/appsettings.json
@@ -14,8 +14,8 @@
   },
   "AppSettings": {
     "DatabaseAccessorSettings": {
-      "Type": "SqlServer",
-      "ConnectionString": "Server=.;Database=QingShan.Test;Trusted_Connection=True;",
+      "Type": "Mysql",
+      "ConnectionString": "Data Source=localhost;Port=3306;User ID=root;Password=123456; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;",
       "SyncStructure": true
     },
     "SpecificationDocumentSettings": {
@@ -66,9 +66,9 @@
       "SecurityDefinitions": [
         {
           "Id": "Bearer",
-          "Type": "Http",
+          "Type": "ApiKey",
           "Name": "Authorization",
-          "Description": "JWT Authorization header using the Bearer scheme.",
+          "Description": "在下框中输入请求头中需要添加Jwt授权Token：Bearer Token。",
           "BearerFormat": "JWT",
           "Scheme": "bearer",
           "In": "Header",
@@ -112,6 +112,12 @@
         "ServeUnknownFileTypes": true, //如果文件不是可识别的内容类型，是否应该提供该文件?默认值:false。
         "DefaultContentType": "application/x-msdownload", // 设置未识别的MIME类型一个默认z值
         "RequestPath": "/qs" //请求路径
+      },
+      {
+        "Folder": "Uploads", //文件夹名称
+        "ServeUnknownFileTypes": true, //如果文件不是可识别的内容类型，是否应该提供该文件?默认值:false。
+        "DefaultContentType": "application/x-msdownload", // 设置未识别的MIME类型一个默认z值
+        "RequestPath": "/Uploads" //请求路径
       }
     ]
 
