--- a/QingShan.Core/QingShan.Core.csproj
+++ b/QingShan.Core/QingShan.Core.csproj
@@ -22,10 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EFCore.BulkExtensions" Version="3.1.1" />
-    <PackageReference Include="FreeSql" Version="2.0.101" />
-    <PackageReference Include="FreeSql.Provider.SqlServer" Version="2.0.101" />
-    <PackageReference Include="FreeSql.Repository" Version="2.0.101" />
+    <PackageReference Include="FreeSql" Version="2.3.200" />
+    <PackageReference Include="FreeSql.Provider.MySql" Version="2.3.200" />
+    <PackageReference Include="FreeSql.Provider.SqlServer" Version="2.3.200" />
+    <PackageReference Include="FreeSql.Repository" Version="2.3.200" />
     <PackageReference Include="Mapster" Version="7.0.0" />
     <PackageReference Include="Mapster.EFCore" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
