--- a/QingShan.Web/QingShan.Web.csproj
+++ b/QingShan.Web/QingShan.Web.csproj
@@ -12,6 +12,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="www\**" />
+    <Content Remove="www\**" />
+    <EmbeddedResource Remove="www\**" />
+    <None Remove="www\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
