--- a/QingShan.Web/appsettings.json
+++ b/QingShan.Web/appsettings.json
@@ -1,9 +1,8 @@
 {
   "Logging": {
-
-    "IncludeScopes": false,
+    //"IncludeScopes": false,
     "LogLevel": {
-      "Default": "Info",
+      //"Default": "Info",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.EntityFrameworkCore.Database": "Information"
