--- a/QingShan.Web/appsettings.json
+++ b/QingShan.Web/appsettings.json
@@ -126,5 +126,9 @@
     //"Redis": {
     //  "ConnectionString": "127.0.0.1:6379"
     //}
+  },
+  "CorsAccessorSettings": {
+    "PolicyName": "web跨域",
+    "WithOrigins": [ "http://zyaxin.com:8082" ]
   }
 }
