修改部分内容

--- a/QingShan.Web/appsettings.json
+++ b/QingShan.Web/appsettings.json
@@ -34,9 +34,9 @@
       ],
       "GroupOpenApiInfos": [
         {
-          "Group": "Default",
-          "Title": "默认API接口",
-          "Description": "这里列举了常见数据库操作方法",
+          "Group": "Admin",
+          "Title": "后台API接口",
+          "Description": "后台API基础接口",
           "Version": "v1",
           "Contact": {
             "Name": "青杉",
@@ -129,6 +129,6 @@
   },
   "CorsAccessorSettings": {
     "PolicyName": "web跨域",
-    "WithOrigins": [ "http://zyaxin.com:8082" ]
+    "WithOrigins": [ "http://zyaxin.com:8082" , "http://localhost:9528" ]
   }
 }
