--- a/QingShan.Core/QingShan.Core.csproj
+++ b/QingShan.Core/QingShan.Core.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <PackageReference Include="FreeSql" Version="2.3.200" />
     <PackageReference Include="FreeSql.Provider.MySql" Version="2.3.200" />
+    <PackageReference Include="FreeSql.Provider.Sqlite" Version="2.3.200" />
     <PackageReference Include="FreeSql.Provider.SqlServer" Version="2.3.200" />
     <PackageReference Include="FreeSql.Repository" Version="2.3.200" />
     <PackageReference Include="Mapster" Version="7.0.0" />
