--- a/QingShan.Web/appsettings.Development.json
+++ b/QingShan.Web/appsettings.Development.json
@@ -1,9 +1,138 @@
 {
   "Logging": {
+    //"IncludeScopes": false,
     "LogLevel": {
-      "Default": "Information",
+      //"Default": "Info",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "Config": {
+    "InitModule": "0"
+  },
+  "AppSettings": {
+    "DatabaseAccessorSettings": {
+      "Type": "Mysql",
+      "ConnectionString": "Data Source=localhost;Port=3306;User ID=root;Password=123456; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
+      "SyncStructure": true
+      //"Type": "Sqlite",
+      //"ConnectionString": "Data Source=xxxtb.db;Attachs=xxxtb.db; Pooling=true;Min Pool Size=1",
+      //"SyncStructure": true
+
+    },
+    "SpecificationDocumentSettings": {
+      "DocumentTitle": "青杉接口服务",
+      "FormatAsV2": true,
+      "RoutePrefix": "",
+      "SpecificationOpenApiInfo": [
+        {
+          "Group": "Default",
+          "Order": 0
+        },
+        {
+          "Group": "Upload",
+          "Order": 1
+        }
+      ],
+      "GroupOpenApiInfos": [
+        {
+          "Group": "Admin",
+          "Title": "后台API接口",
+          "Description": "后台API基础接口",
+          "Version": "v1",
+          "Contact": {
+            "Name": "青杉",
+            "Url": "http://zyaxin.com/",
+            "Email": "qingshan@zyaxin.com"
+          },
+          "License": {
+            "Name": "Apache-2.0"
+          }
+        },
+        {
+          "Group": "Upload",
+          "Title": "上传服务",
+          "Description": "这是上传文件的服务接口",
+          "Version": "v1",
+          "Contact": {
+            "Name": "青杉",
+            "Url": "http://zyaxin.com/",
+            "Email": "qingshan@zyaxin.com"
+          },
+          "License": {
+            "Name": "Apache-2.0"
+          }
+        }
+      ],
+      "EnableAuthorized": true,
+      "SecurityDefinitions": [
+        {
+          "Id": "Bearer",
+          "Type": "ApiKey",
+          "Name": "Authorization",
+          "Description": "在下框中输入请求头中需要添加Jwt授权Token：Bearer Token。",
+          "BearerFormat": "JWT",
+          "Scheme": "bearer",
+          "In": "Header",
+
+          "Requirement": {
+            "Scheme": {
+              "Reference": {
+                "Id": "Bearer",
+                "Type": "SecurityScheme"
+              },
+              "Accesses": []
+            }
+          }
+        }
+      ]
+    }
+  },
+
+  "JWTSettings": {
+    "ValidateIssuerSigningKey": true, // 是否验证密钥，bool 类型，默认true
+    "IssuerSigningKey": "pE1yb^iJHJh7zSL0CBctR9Se!bKD8P3ZpL*N", // 密钥，string 类型，必须是复杂密钥，长度大于16
+    "ValidateIssuer": true, // 是否验证签发方，bool 类型，默认true
+    "ValidIssuer": "QingShan", // 签发方，string 类型
+    "ValidateAudience": true, // 是否验证签收方，bool 类型，默认true
+    "ValidAudience": "QS", // 签收方，string 类型
+    "ValidateLifetime": true, // 是否验证过期时间，bool 类型，默认true，建议true
+    "ExpiredTime": 20, // 过期时间，long 类型，单位分钟，默认20分钟
+    "ClockSkew": 5 // 过期时间容错值，long 类型，单位秒，默认 5秒
+  },
+  "StaticFileSettings": {
+    "UseDirectoryBrowser": false,
+    "StaticFileMap": [
+      {
+        "Suffix": ".jpg", //文件后缀
+        "FileType": "image/jpeg" // 文件类型
+      }
+    ],
+    "StaticFileFolder": [
+      {
+        "Folder": "www", //文件夹名称
+        "ServeUnknownFileTypes": true, //如果文件不是可识别的内容类型，是否应该提供该文件?默认值:false。
+        "DefaultContentType": "application/x-msdownload", // 设置未识别的MIME类型一个默认z值
+        "RequestPath": "/qs" //请求路径
+      },
+      {
+        "Folder": "Uploads", //文件夹名称
+        "ServeUnknownFileTypes": true, //如果文件不是可识别的内容类型，是否应该提供该文件?默认值:false。
+        "DefaultContentType": "application/x-msdownload", // 设置未识别的MIME类型一个默认z值
+        "RequestPath": "/Uploads" //请求路径
+      }
+    ]
+
+  },
+  "Cache": {
+    //"Redis": {
+    //  "ConnectionString": "127.0.0.1:6379"
+    //}
+  },
+  "CorsAccessorSettings": {
+    "PolicyName": "web跨域",
+    "WithOrigins": [ "http://zyaxin.com:8082", "http://localhost:9528" ]
   }
 }
