--- a/QingShan/QingShan.csproj
+++ b/QingShan/QingShan.csproj
@@ -6,7 +6,9 @@
     <Description>青杉基础NuGet表</Description>
     <PackageId>QingShan</PackageId>
     <Authors>青杉</Authors>
-    <Version>1.0.3</Version>
+    <Version>1.0.5</Version>
+    <PackageProjectUrl>https://gitee.com/ZYX315/QingShan</PackageProjectUrl>
+    <RepositoryUrl>https://gitee.com/ZYX315/QingShan</RepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net5.0|AnyCPU'">
