--- a/QingShan.Web/appsettings.Development.json
+++ b/QingShan.Web/appsettings.Development.json
@@ -15,7 +15,7 @@
   "AppSettings": {
     "DatabaseAccessorSettings": {
       "Type": "Mysql",
-      "ConnectionString": "Data Source=localhost;Port=3306;User ID=root;Password=123456; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
+      "ConnectionString": "Data Source=mysql;Port=3306;User ID=root;Password=123456; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
       "SyncStructure": true
       //"Type": "Sqlite",
       //"ConnectionString": "Data Source=xxxtb.db;Attachs=xxxtb.db; Pooling=true;Min Pool Size=1",
