--- a/QingShan.Web/appsettings.Development.json
+++ b/QingShan.Web/appsettings.Development.json
@@ -15,7 +15,7 @@
   "AppSettings": {
     "DatabaseAccessorSettings": {
       "Type": "Mysql",
-      "ConnectionString": "Data Source=localhost;Port=3306;User ID=root;Password=123456; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
+      "ConnectionString": "Data Source=mysql;Port=3306;User ID=root;Password=123456; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
       "SyncStructure": true
       //"Type": "Sqlite",
       //"ConnectionString": "Data Source=xxxtb.db;Attachs=xxxtb.db; Pooling=true;Min Pool Size=1",
@@ -23,7 +23,7 @@
 
     },
     "SpecificationDocumentSettings": {
-      "DocumentTitle": "ÇàÉ¼½Ó¿Ú·şÎñ",
+      "DocumentTitle": "é’æ‰æ¥å£æœåŠ¡",
       "FormatAsV2": true,
       "RoutePrefix": "",
       "SpecificationOpenApiInfo": [
@@ -39,11 +39,11 @@
       "GroupOpenApiInfos": [
         {
           "Group": "Admin",
-          "Title": "ºóÌ¨API½Ó¿Ú",
-          "Description": "ºóÌ¨API»ù´¡½Ó¿Ú",
+          "Title": "åå°APIæ¥å£",
+          "Description": "åå°APIåŸºç¡€æ¥å£",
           "Version": "v1",
           "Contact": {
-            "Name": "ÇàÉ¼",
+            "Name": "é’æ‰",
             "Url": "http://zyaxin.com/",
             "Email": "qingshan@zyaxin.com"
           },
@@ -53,11 +53,11 @@
         },
         {
           "Group": "Upload",
-          "Title": "ÉÏ´«·şÎñ",
-          "Description": "ÕâÊÇÉÏ´«ÎÄ¼şµÄ·şÎñ½Ó¿Ú",
+          "Title": "ä¸Šä¼ æœåŠ¡",
+          "Description": "è¿™æ˜¯ä¸Šä¼ æ–‡ä»¶çš„æœåŠ¡æ¥å£",
           "Version": "v1",
           "Contact": {
-            "Name": "ÇàÉ¼",
+            "Name": "é’æ‰",
             "Url": "http://zyaxin.com/",
             "Email": "qingshan@zyaxin.com"
           },
@@ -72,7 +72,7 @@
           "Id": "Bearer",
           "Type": "ApiKey",
           "Name": "Authorization",
-          "Description": "ÔÚÏÂ¿òÖĞÊäÈëÇëÇóÍ·ÖĞĞèÒªÌí¼ÓJwtÊÚÈ¨Token£ºBearer Token¡£",
+          "Description": "åœ¨ä¸‹æ¡†ä¸­è¾“å…¥è¯·æ±‚å¤´ä¸­éœ€è¦æ·»åŠ JwtæˆæƒTokenï¼šBearer Tokenã€‚",
           "BearerFormat": "JWT",
           "Scheme": "bearer",
           "In": "Header",
@@ -92,36 +92,36 @@
   },
 
   "JWTSettings": {
-    "ValidateIssuerSigningKey": true, // ÊÇ·ñÑéÖ¤ÃÜÔ¿£¬bool ÀàĞÍ£¬Ä¬ÈÏtrue
-    "IssuerSigningKey": "pE1yb^iJHJh7zSL0CBctR9Se!bKD8P3ZpL*N", // ÃÜÔ¿£¬string ÀàĞÍ£¬±ØĞëÊÇ¸´ÔÓÃÜÔ¿£¬³¤¶È´óÓÚ16
-    "ValidateIssuer": true, // ÊÇ·ñÑéÖ¤Ç©·¢·½£¬bool ÀàĞÍ£¬Ä¬ÈÏtrue
-    "ValidIssuer": "QingShan", // Ç©·¢·½£¬string ÀàĞÍ
-    "ValidateAudience": true, // ÊÇ·ñÑéÖ¤Ç©ÊÕ·½£¬bool ÀàĞÍ£¬Ä¬ÈÏtrue
-    "ValidAudience": "QS", // Ç©ÊÕ·½£¬string ÀàĞÍ
-    "ValidateLifetime": true, // ÊÇ·ñÑéÖ¤¹ıÆÚÊ±¼ä£¬bool ÀàĞÍ£¬Ä¬ÈÏtrue£¬½¨Òétrue
-    "ExpiredTime": 20, // ¹ıÆÚÊ±¼ä£¬long ÀàĞÍ£¬µ¥Î»·ÖÖÓ£¬Ä¬ÈÏ20·ÖÖÓ
-    "ClockSkew": 5 // ¹ıÆÚÊ±¼äÈİ´íÖµ£¬long ÀàĞÍ£¬µ¥Î»Ãë£¬Ä¬ÈÏ 5Ãë
+    "ValidateIssuerSigningKey": true, // æ˜¯å¦éªŒè¯å¯†é’¥ï¼Œbool ç±»å‹ï¼Œé»˜è®¤true
+    "IssuerSigningKey": "pE1yb^iJHJh7zSL0CBctR9Se!bKD8P3ZpL*N", // å¯†é’¥ï¼Œstring ç±»å‹ï¼Œå¿…é¡»æ˜¯å¤æ‚å¯†é’¥ï¼Œé•¿åº¦å¤§äº16
+    "ValidateIssuer": true, // æ˜¯å¦éªŒè¯ç­¾å‘æ–¹ï¼Œbool ç±»å‹ï¼Œé»˜è®¤true
+    "ValidIssuer": "QingShan", // ç­¾å‘æ–¹ï¼Œstring ç±»å‹
+    "ValidateAudience": true, // æ˜¯å¦éªŒè¯ç­¾æ”¶æ–¹ï¼Œbool ç±»å‹ï¼Œé»˜è®¤true
+    "ValidAudience": "QS", // ç­¾æ”¶æ–¹ï¼Œstring ç±»å‹
+    "ValidateLifetime": true, // æ˜¯å¦éªŒè¯è¿‡æœŸæ—¶é—´ï¼Œbool ç±»å‹ï¼Œé»˜è®¤trueï¼Œå»ºè®®true
+    "ExpiredTime": 20, // è¿‡æœŸæ—¶é—´ï¼Œlong ç±»å‹ï¼Œå•ä½åˆ†é’Ÿï¼Œé»˜è®¤20åˆ†é’Ÿ
+    "ClockSkew": 5 // è¿‡æœŸæ—¶é—´å®¹é”™å€¼ï¼Œlong ç±»å‹ï¼Œå•ä½ç§’ï¼Œé»˜è®¤ 5ç§’
   },
   "StaticFileSettings": {
     "UseDirectoryBrowser": false,
     "StaticFileMap": [
       {
-        "Suffix": ".jpg", //ÎÄ¼şºó×º
-        "FileType": "image/jpeg" // ÎÄ¼şÀàĞÍ
+        "Suffix": ".jpg", //æ–‡ä»¶åç¼€
+        "FileType": "image/jpeg" // æ–‡ä»¶ç±»å‹
       }
     ],
     "StaticFileFolder": [
       {
-        "Folder": "www", //ÎÄ¼ş¼ĞÃû³Æ
-        "ServeUnknownFileTypes": true, //Èç¹ûÎÄ¼ş²»ÊÇ¿ÉÊ¶±ğµÄÄÚÈİÀàĞÍ£¬ÊÇ·ñÓ¦¸ÃÌá¹©¸ÃÎÄ¼ş?Ä¬ÈÏÖµ:false¡£
-        "DefaultContentType": "application/x-msdownload", // ÉèÖÃÎ´Ê¶±ğµÄMIMEÀàĞÍÒ»¸öÄ¬ÈÏzÖµ
-        "RequestPath": "/qs" //ÇëÇóÂ·¾¶
+        "Folder": "www", //æ–‡ä»¶å¤¹åç§°
+        "ServeUnknownFileTypes": true, //å¦‚æœæ–‡ä»¶ä¸æ˜¯å¯è¯†åˆ«çš„å†…å®¹ç±»å‹ï¼Œæ˜¯å¦åº”è¯¥æä¾›è¯¥æ–‡ä»¶?é»˜è®¤å€¼:falseã€‚
+        "DefaultContentType": "application/x-msdownload", // è®¾ç½®æœªè¯†åˆ«çš„MIMEç±»å‹ä¸€ä¸ªé»˜è®¤zå€¼
+        "RequestPath": "/qs" //è¯·æ±‚è·¯å¾„
       },
       {
-        "Folder": "Uploads", //ÎÄ¼ş¼ĞÃû³Æ
-        "ServeUnknownFileTypes": true, //Èç¹ûÎÄ¼ş²»ÊÇ¿ÉÊ¶±ğµÄÄÚÈİÀàĞÍ£¬ÊÇ·ñÓ¦¸ÃÌá¹©¸ÃÎÄ¼ş?Ä¬ÈÏÖµ:false¡£
-        "DefaultContentType": "application/x-msdownload", // ÉèÖÃÎ´Ê¶±ğµÄMIMEÀàĞÍÒ»¸öÄ¬ÈÏzÖµ
-        "RequestPath": "/Uploads" //ÇëÇóÂ·¾¶
+        "Folder": "Uploads", //æ–‡ä»¶å¤¹åç§°
+        "ServeUnknownFileTypes": true, //å¦‚æœæ–‡ä»¶ä¸æ˜¯å¯è¯†åˆ«çš„å†…å®¹ç±»å‹ï¼Œæ˜¯å¦åº”è¯¥æä¾›è¯¥æ–‡ä»¶?é»˜è®¤å€¼:falseã€‚
+        "DefaultContentType": "application/x-msdownload", // è®¾ç½®æœªè¯†åˆ«çš„MIMEç±»å‹ä¸€ä¸ªé»˜è®¤zå€¼
+        "RequestPath": "/Uploads" //è¯·æ±‚è·¯å¾„
       }
     ]
 
@@ -132,7 +132,7 @@
     //}
   },
   "CorsAccessorSettings": {
-    "PolicyName": "web¿çÓò",
-    "WithOrigins": [ "http://zyaxin.com:8082", "http://localhost:9528" ]
+    "PolicyName": "webè·¨åŸŸ",
+    "WithOrigins": [ "http://zyaxin.com:8082" , "http://localhost:9528" ]
   }
 }
