--- a/QingShan.Web/nlog.config
+++ b/QingShan.Web/nlog.config
@@ -6,9 +6,44 @@
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
   </extensions>
-
-  <!-- the targets to write to -->
+  
+    <!-- the targets to write to -->
   <targets>
+    <target name="database" xsi:type="Database"
+               dbProvider="MySql.Data.MySqlClient.MySqlConnection, MySql.Data"
+               connectionString="server=101.200.242.7;Database=QingShan;user id=root;password=123456;SslMode=none"
+            >
+    <!--
+CREATE TABLE `log` (
+ `Id` int(10) unsigned NOT NULL AUTO_INCREMENT,
+ `Application` varchar(50) DEFAULT NULL,
+ `Logged` datetime DEFAULT NULL,
+ `Level` varchar(50) DEFAULT NULL,
+ `Message` varchar(512) DEFAULT NULL,
+ `Logger` varchar(250) DEFAULT NULL,
+ `Callsite` varchar(512) DEFAULT NULL,
+ `Exception` varchar(512) DEFAULT NULL,
+ PRIMARY KEY (`Id`)
+) ENGINE=InnoDB AUTO_INCREMENT=2 DEFAULT CHARSET=utf8;
+
+-->
+    <commandText>
+      insert into log (
+      Application, Logged, Level, Message,
+      Logger, CallSite, Exception
+      ) values (
+      @Application, @Logged, @Level, @Message,
+      @Logger, @Callsite, @Exception
+      );
+    </commandText>
+    <parameter name="@application" layout="NLogTestDemo" />
+    <parameter name="@logged" layout="${date}" />
+    <parameter name="@level" layout="${level}" />
+    <parameter name="@message" layout="${message}" />
+    <parameter name="@logger" layout="${logger}" />
+    <parameter name="@callSite" layout="${callsite:filename=true}" />
+    <parameter name="@exception" layout="${exception:tostring}" />
+    </target>
     <!--写入文件-->
     <target
      xsi:type="File"
