--- a/QingShan.Web/appsettings.Development.json
+++ b/QingShan.Web/appsettings.Development.json
@@ -15,12 +15,10 @@
   "AppSettings": {
     "DatabaseAccessorSettings": {
       "Type": "Mysql",
-      "ConnectionString": "Data Source=mysql;Port=3306;User ID=root;Password=123456; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
-      "SyncStructure": true
-      //"Type": "Sqlite",
-      //"ConnectionString": "Data Source=xxxtb.db;Attachs=xxxtb.db; Pooling=true;Min Pool Size=1",
-      //"SyncStructure": true
-
+      "ConnectionString": "Data Source=localhost;Port=3306;User ID=root;Password=123456; Initial Catalog=QingShan;Charset=utf8; SslMode=none;Min pool size=1;AllowPublicKeyRetrieval=True;",
+      "SyncStructure": true,
+      "PrintingSQL": true,
+      "GlobalFilter": true
     },
     "SpecificationDocumentSettings": {
       "DocumentTitle": "青杉接口服务",
@@ -133,6 +131,6 @@
   },
   "CorsAccessorSettings": {
     "PolicyName": "web跨域",
-    "WithOrigins": [ "http://zyaxin.com:8082" , "http://localhost:9528" ]
+    "WithOrigins": [ "http://zyaxin.com:8082", "http://localhost:9528", "http://localhost:8000" ]
   }
 }
