新增部分内容

--- a/QingShan.Web/appsettings.Development.json
+++ b/QingShan.Web/appsettings.Development.json
@@ -22,7 +22,7 @@
     },
     "SpecificationDocumentSettings": {
       "DocumentTitle": "青杉接口服务",
-      "FormatAsV2": true,
+      "FormatAsV2": false,
       "RoutePrefix": "",
       "SpecificationOpenApiInfo": [
         {
@@ -32,6 +32,10 @@
         {
           "Group": "Upload",
           "Order": 1
+        },
+        {
+          "Group": "Test",
+          "Order": 2
         }
       ],
       "GroupOpenApiInfos": [
@@ -96,12 +100,12 @@
     "ValidIssuer": "QingShan", // 签发方，string 类型
     "ValidateAudience": true, // 是否验证签收方，bool 类型，默认true
     "ValidAudience": "QS", // 签收方，string 类型
-    "ValidateLifetime": true, // 是否验证过期时间，bool 类型，默认true，建议true
+    "ValidateLifetime": false, // 是否验证过期时间，bool 类型，默认true，建议true
     "ExpiredTime": 20, // 过期时间，long 类型，单位分钟，默认20分钟
     "ClockSkew": 5 // 过期时间容错值，long 类型，单位秒，默认 5秒
   },
   "StaticFileSettings": {
-    "UseDirectoryBrowser": false,
+    "UseDirectoryBrowser": true,
     "StaticFileMap": [
       {
         "Suffix": ".jpg", //文件后缀
@@ -131,6 +135,31 @@
   },
   "CorsAccessorSettings": {
     "PolicyName": "web跨域",
-    "WithOrigins": [ "http://zyaxin.com:8082", "http://localhost:9528", "http://localhost:8000" ]
+    "WithOrigins": [ "http://zyaxin.com:8082", "http://localhost:9528", "http://localhost:8001", "http://localhost:8000" ]
+  },
+  "IpRateLimiting": {
+    //false则全局将应用限制，并且仅应用具有作为端点的规则* 。 true则限制将应用于每个端点，如{HTTP_Verb}{PATH}
+    "EnableEndpointRateLimiting": true,
+    //false则拒绝的API调用不会添加到调用次数计数器上
+    "StackBlockedRequests": false,
+    //注意这个配置，表示获取用户端的真实IP，我们的线上经过负载后是 X-Forwarded-For，而测试服务器没有，所以是X-Real-IP
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 200,
+    "QuotaExceededResponse": {
+      "Content": "{{\"code\":429,\"msg\":\"访问过于频繁，请稍后重试\",\"data\":null}}",
+      "ContentType": "application/json",
+      "StatusCode": 200
+    },
+    "IpWhitelist": [],
+    "EndpointWhitelist": [],
+    "ClientWhitelist": [],
+    "GeneralRules": [
+      {
+        "Endpoint": "*:/api/values/test",
+        "Period": "5s",
+        "Limit": 3
+      }
+    ]
   }
 }
