--- a/QingShan.Core/QingShan.Core.csproj
+++ b/QingShan.Core/QingShan.Core.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCoreRateLimit" Version="4.0.0" />
     <PackageReference Include="FreeSql" Version="2.3.200" />
     <PackageReference Include="FreeSql.Provider.MySql" Version="2.3.200" />
     <PackageReference Include="FreeSql.Provider.Sqlite" Version="2.3.200" />
@@ -37,7 +38,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
     <PackageReference Include="MiniProfiler.AspNetCore" Version="4.2.1" />
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Panda.DynamicWebApi" Version="1.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
