--- a/QingShan.ServiceLayer/QingShan.Services.csproj
+++ b/QingShan.ServiceLayer/QingShan.Services.csproj
@@ -10,6 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FreeSql" Version="2.5.100" />
+    <PackageReference Include="FreeSql.Extensions.JsonMap" Version="2.5.100" />
+    <PackageReference Include="FreeSql.Provider.MySql" Version="2.5.100" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
