--- a/QingShan.Web/Properties/launchSettings.json
+++ b/QingShan.Web/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:44338;"
+      "applicationUrl": "https://localhost:44338;http://localhost:6001"
     },
     "Docker": {
       "commandName": "Docker",
