--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,10 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'qs_regisitry'
+        command: 'login'
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'qs_regisitry'
         repository: 'qs.core.api'
         command: 'buildAndPush'
         Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
