--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ stages:
         command: 'build'
         Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
 
-      task: Docker@2
+    - task: Docker@2
       inputs:
         containerRegistry: 'qs_regisitry'
         repository: '$(Build.Repository.Name)'
