--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ stages:
         repository: '$(Build.Repository.Name)'
         command: 'build'
         Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-
+        tags: $(Build.BuildId)
     - task: Docker@2
       inputs:
         containerRegistry: 'qs_regisitry'
