Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,8 @@ stages:
   jobs:  
   - job: Build
     displayName: Build
-    pool: 'QSPool'
+    pool:
+        vmImage: 'ubuntu-1604'
     steps:
     - task: Docker@2
       inputs:
