Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,9 +16,9 @@ stages:
     displayName: Build
     pool: QSPool
     steps:
-      - task: Docker@2
-        inputs:
-          containerRegistry: 'qs_regisitry'
-          repository: 'qs.web.api'
-          command: 'buildAndPush'
-          Dockerfile: '**/Dockerfile'
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'qs_regisitry'
+        repository: 'qs.web.api'
+        command: 'build'
+        Dockerfile: '**/Dockerfile'
