Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ stages:
     steps:
     - task: Docker@2
       inputs:
+        buildContext : $(Build.Repository.LocalPath)
         containerRegistry: 'qs_regisitry'
         repository: 'qs.web.api'
         command: 'build'
