Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -22,5 +22,5 @@ stages:
       inputs:
         containerRegistry: 'QSDockerRegistry'
         repository: 'qs.web.api'
-        command: 'build'
+        command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
