Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -31,6 +31,6 @@ stages:
     - task: Docker@2
       inputs:
         containerRegistry: 'QSDockerRegistry'
-        repository: '$(Build.Repository.Name)'
+        repository: 'qs.web.api'
         command: 'push'
     
