Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -22,15 +22,6 @@ stages:
       inputs:
         containerRegistry: 'QSDockerRegistry'
         repository: 'qs.web.api'
-        command: 'build'
+        command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
-    - task: Docker@2
-      inputs:
-        containerRegistry: 'QSDockerRegistry'
-        command: 'login'
-    - task: Docker@2
-      inputs:
-        containerRegistry: 'QSDockerRegistry'
-        repository: 'qs.web.api'
-        command: 'push'
     
